--- a/dashaboard_vesp1/index.html
+++ b/dashaboard_vesp1/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!--cabeçalho-->
     <header class= "cabecalho">
         <div class="cabecalho_detalhes">
             <img src="./images/logo.png" alt="Logo da empresa">
@@ -17,6 +18,7 @@
             <img src="./images/user.jpg" alt="Usuário">
         </div>
     </header>
+    <!--final cabeçalho-->
     
 </body>
 </html>
